portal-processual/portal-deploy.yaml
# Deployment + Servide para Portal-Processual
# Mauro - 14/03/22
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deployment
  namespace: mauro-teste
  labels:
    app: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal-deployment
          image: mtximai/portal-processual:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: portal-service
  namespace: mauro-teste
spec:
  type: NodePort
  selector:
    app: portal
  ports:
    - name: http
      protocol: TCP
      port: 3006
      targetPort: 3000
#  externalIPs:
#    - 172.22.195.153
